--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                         <input type="number" name="number" id="mobileNumber" class="form-control shadow-none rounded-1"
                             placeholder="Enter your mobile number">
                     </div>
-                    <button type="submit" class="btn btn-success mt-3 rounded-1 fw-medium" onclick="onCreateTodo(event)">
+                    <button type="submit" class="btn btn-success mt-3 rounded-1 fw-medium"
+                        onclick="onCreateTodo(event)">
                         Add Todo
                     </button>
                 </form>
@@ -61,44 +62,23 @@
                         </div>
                         <!-- header end here -->
 
-                        <!-- row start here -->
                         <div class="bg-white todo-list-screen">
-                            <div class="todo-list-row border-bottom inventory-grid">
-                                <!-- ID Row -->
-                                <div>1</div>
-
-                                <!-- Name Row -->
-                                <div>abc jangid</div>
-
-                                <!-- Email Row -->
-                                <div>abc123@gmail.com</div>
-
-                                <!-- Mobile Number Row -->
-                                <div>1234567890</div>
-
-                                <!-- Action Row -->
-                                <div>
-                                    <div class="d-flex gap-1">
-                                        Action
-                                        <!-- <mat-icon class="text-danger delete-material-icon"
-                                            (click)="onDeleteTodo()">delete</mat-icon>
-                                        <mat-icon class="text-primary edit-material-icon"
-                                            (click)="onUpdateTodo()">edit</mat-icon> -->
-                                    </div>
-                                </div>
-                            </div>
+                            <!-- row start here -->
+                            <!-- row end here -->
                         </div>
-                        <!-- row end here -->
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-    <script src="./js/index.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+            crossorigin="anonymous"></script>
+        <script src="./js/index.js"></script>
+
+        <!-- <div class="todo-list-row border-bottom inventory-grid">
+                            
+                            </div> -->
 </body>
 
 </html>
