put api intregate

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <input type="number" name="number" id="mobileNumber" class="form-control shadow-none rounded-1"
                             placeholder="Enter your mobile number">
                     </div>
-                    <button type="submit" class="btn btn-success mt-3 rounded-1 fw-medium"
+                    <button type="submit" id="todoBtn" class="btn btn-success mt-3 rounded-1 fw-medium"
                         onclick="onCreateTodo(event)">
                         Add Todo
                     </button>
