--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <div class="row justify-content-center justify-content-md-center justify-content-lg-center">
-            <div class="col-lg-6 col-md-6 col-sm-12 mt-4">
+            <div class="col-lg-6 col-md-6 col-sm-12 mt-2">
                 <form class="border p-4 shadow-sm rounded-2 bg-white">
                     <div class="form-group">
                         <label class="form-label">Name</label>
@@ -40,8 +40,8 @@
                 </form>
             </div>
 
-            <div class="col-lg-9 col-md-11 col-sm-12 mt-4">
-                <div class="d-flex flex-column shadow-sm mt-3 todo-list-container">
+            <div class="col-lg-9 col-md-11 col-sm-12 mt-3">
+                <div class="d-flex flex-column shadow-sm todo-list-container">
                     <div class="todo-list-scroll">
                         <!-- header start here -->
                         <div class="todo-list-header border-bottom inventory-grid bg-success">
